--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     build: .
     restart: always
     extra_hosts:
-       xmas-hp.hormann.local: 192.168.0.212
+       xmas2204.hormann.local: 192.168.1.142
     volumes:
        - christmasnames-log:/usr/src/app/logs
     ports:
